--- a/backoffice.html
+++ b/backoffice.html
@@ -51,6 +51,9 @@
                             </div>
                         </div>
                     </div>
+                    <div class="mt-3 alert alert-warning d-none" role="alert">
+                        Please fill each field!
+                    </div>
                 </div>
 
             </div>
