--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="mt-2 ps-2 pe-2 pb-2 d-flex justify-content-between">
+    <nav class="pt-2 ps-2 pe-2 pb-2 d-flex justify-content-between">
         <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i class="fa-solid fa-cart-shopping"></i></button>
         <h1 class="titolo-principale text-center">-keyShop-</h1>
         <button id="backOfficeBtn" type="button" class="btn btn-primary">Backoffice</button>
