--- a/backoffice.html
+++ b/backoffice.html
@@ -13,7 +13,7 @@
 <body>
 
     <!-- Navbar backoffice -->
-    <nav class="mt-2 ps-2 pe-2 pb-2 d-flex justify-content-between">
+    <nav class="pt-2 ps-2 pe-2 pb-2 d-flex justify-content-between">
         <button id="homeBtn" class="btn btn-primary" type="button"><i class="fa-solid fa-house"></i></button>
         <h1 class="text-center titolo-principale">-Backoffice-</h1>
         <button id="uploadKeyBtn" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
